added link to css file

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,4 @@
-<!-- 
 
-Hello Camper!
-
-Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
-
-- The freeCodeCamp Team 
-
--->
 <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -21,6 +13,7 @@ Please read the README below in the JS Editor before beginning. Feel free to del
   href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
   rel="stylesheet"
 />
+<link rel="stylesheet" href="style.css">
 <!-- START NAV -->
 
 <nav id="navbar" class="nav">
